# language-model

./: .gitignore  LICENSE  README.md  TRAINING_CONTROL.md  install_on_remote.sh  pyproject.toml  run_all.sh  stop_training.py  test_log_level.py
data/input/: input.txt  input_2.txt
data/input/chat-align/: question_answer_dataset.parquet  train-00000-of-00001.parquet
data/input/parquet_files/: 000_00001.parquet  000_00002.parquet
scripts/: checkpoint_resizer.py  export_to_safetensors.py  model_size.py  stop_training.py  strip_parquet_column.py
src/language_model/: char_tokenizer.py  checkpointing.py  config.py  constants.py  data_handler.py  data_loading.py  evaluation.py  exceptions.py  export.py  gpt.py  helpers.py  model.py  qa_processing.py  serving.py  streamlit_app.py  subword_tokenizer.py  tensorboard_utils.py  test_export.py  test_log_level.py  test_memory.py  test_model_loading.py  test_serving.py  tokenizer_pre_training_check.py  train_utils.py  training_helpers.py  word_tokenizer.py
src/language_model/scripts/: analyse_memory.py  analyse_model_loading.py  checkpoint_resizer.py  diagnostic_memory.py  export_to_safetensors.py  model_size.py  stop_training.py  test_model_loading.py
src/sbab_gpt/: char_tokenizer.py  export.py  gpt.py  serving.py  streamlit_app.py  word_tokenizer.py
tests/: conftest.py  test_data_handler.py  test_export.py  test_helpers.py  test_integration.py  test_log_level.py  test_model_loading.py  test_sequential_batches.py  test_serving.py
tests/fixtures/: best_model.pt  chat_aligned_model.pt  vocab_subword.json
tests/fixtures/test_text_data/: base_training_data.parquet  question_answer_dataset.parquet
