[project]
name = "language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "matplotlib>=3.10.3",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "watchdog>=6.0.0",
]
