[project]
name = "language-model"
version = "0.1.0"
description = "A project for training and serving language models"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "tensorboard>=2.19.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "watchdog>=6.0.0",
]
