[project]
name = "language-model"
version = "0.1.0"
authors = [
    { name = "Thomas Selin", email = "example@example.com" }
]
description = "A project for training and serving language models"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "tensorboard>=2.19.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "watchdog>=6.0.0",
    "pytest>=8.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
